# Fractal-Project

./: LICENSE  README.md  setup.cfg
doc/source/: conf.py  fractals.rst  modules.rst
fractals/: __init__.py  __main__.py  helper.py
tests/: tests_fractals.py
