[metadata]
name = fractals
author = Isabella Rigue
version = 1.0
license_file = LICENSE
license = MIT
description = Un générateur de fractales, y compris les ensembles de Mandelbrot et de Julia.
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    numba

[options.entry_points]
console_scripts = 
    MandelbrotPlot=fractals.__main__:main
    JuliaPlot=fractals.__main__:main


[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS